<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BOMBERMAN</string>
    <string name="action_settings">Settings</string>
    <string name="uid_text">DAN</string>
    <string name="score_text">3949</string>
    <string name="tleft_text">40:30</string>
    <string name="no_players_text">4</string>
    <string name="edit_message" />
    <string name="button_up">▲</string>
    <string name="button_down">▼</string>
    <string name="button_left">◀</string>
    <string name="button_right">▶</string>
    <string name="done">done</string>
    <string name="reminder" />
    <string name="button_bomb">Bomb</string>
    <string name="button_pause">Pause</string>
    <string name="button_quit">Quit</string>

</resources>